base/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: myapp-service
  namespace: dev

spec:
  type: ClusterIP

  selector:
    app: myapp

  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
