base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: myapp-ingress
  namespace: dev

spec:
  ingressClassName: nginx

  rules:
  - host: app.dev.company.com

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: myapp-service

            port:
              number: 80
